<resources>
    <string name="app_name">MyDog</string>
    <string name="main_lbl_lastphotos">Tus últimas fotos</string>
    <string name="main_lbl_yourpets">Tus mascotas</string>
    <string name="navbar_main">Inicio</string>
    <string name="navbar_mypets">Mis mascotas</string>
    <string name="navbar_services">Utilidades</string>
    <string name="settings_logout">Desconectar</string>
    <string name="eliminar_mascota">Eliminar</string>
    <string name="editar_mascota">Editar</string>
    <string name="dialog_picker">Selecciona una fecha</string>
    <string name="dialog_notas">Notas</string>
    <string name="button_cancelar">CANCELAR</string>
    <string name="button_aceptar">ACEPTAR</string>


    <!-- Login -->
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_with_email">Iniciar Sesión</string>
    <string name="login_with_google">Iniciar sesión con Google</string>
    <string name="remember_password">Recordar contraseña</string>
    <string name="new_account">Crear una cuenta</string>
    <string name="return_login">Volver</string>
    <string name="register">Registrarse</string>
    <string name="repeat_password">Repetir contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
