<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondohuellastrans"
    android:fillViewport="true"
    tools:context=".activities.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.login.LoginActivity"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/logo_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextRepeatPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/button_signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_signUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_ripple_bg"
            android:text="@string/register"
            android:textColor="@color/colorBottomNavigationBackground"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/button_return"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_return"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_ripple"
            android:text="@string/return_login"
            android:textColor="@color/colorBottomNavigationBackground"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>